# pySigma-backend-surrealql

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/surrealql/: __init__.py  surrealql.py
sigma/pipelines/surrealql/: __init__.py  surrealql.py
tests/: test_backend_surrealql.py  test_pipelines_surrealql.py
