[tool.poetry]
name = "pySigma-backend-surrealql"
version = "0.1.0"
description = "pySigma SurrealQL backend"
authors = ["Raffaele Paolo Fontana <raffaele.fontana.02@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/obviouslynotraffa/pySigma-backend-surrealql"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.17"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.3"
pytest-cov = "^5.0.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
